fix(frontend): using standard spacing

--- a/frontend/src/css/ContentItemHeader.styl
+++ b/frontend/src/css/ContentItemHeader.styl
@@ -20,9 +20,9 @@ createInFolderButtonWidth = 74px
     text-align center
   &__modification
     flex 1
-    padding 10px
+    padding standardSpacing
   &__actions
-    padding 10px
+    padding standardSpacing
   &__search
     display flex
     flex-grow 5
